2009-03-30  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* src/Core/Banshee.Services/Banshee.Playlists.Formats/Tests/PlaylistFormatTests.cs:
	* tests/Banshee.Services/playlist-data/reference_local.asx:
	* tests/Banshee.Services/playlist-data/reference_remote.asx: Add some
	unit tests for ASF reference playlists. The remote test, like all
	ASX tests with a remote URL, is broken because we have to change
	http://	to mmsh://.

2009-03-30  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Dap/Banshee.Dap/Banshee.Dap/DapSource.cs: Patch from Andrés G.
	Aragoneses disposing the sync object when the dap is disposed, fixing a
	crash if automatic-sync was enabled (BGO #577072)

2009-03-29  Alexander Kojevnikov  <alexander@kojevnikov.com>

	* src/Core/Banshee.Services/Banshee.PlaybackController/PlaybackControllerService.cs:
	* src/Core/Banshee.Services/Banshee.PlaybackController/PlaybackRepeatMode.cs:
	* src/Core/Banshee.Services/Banshee.PlaybackController/PlaybackShuffleMode.cs:
	* src/Core/Banshee.ThickClient/Banshee.Gui/PlaybackRepeatActions.cs:
	* src/Core/Banshee.ThickClient/Banshee.Gui/PlaybackShuffleActions.cs:
	Update the UI when repeat and shuffle mode is changed using DBus
	(BGO #575383).

2009-03-29  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* src/Core/Banshee.Services/Banshee.Playlists.Formats/PlaylistParser.cs:
	* src/Core/Banshee.Services/Banshee.Playlists.Formats/AsfReferencePlaylistFormat.cs:
	* src/Core/Banshee.Services/Banshee.Services.csproj:
	* src/Core/Banshee.Services/Makefile.am: Patch from Félix Velasco
	adding support for ASF reference playlists, with small changes by me
	(BGO #545646).

2009-03-26  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* src/Core/Banshee.Services/Banshee.Database/BansheeDbConnection.cs:
	Fix my previous patch to properly handle the case when a table is not
	in sqlite_stat1.

2009-03-26  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* src/Core/Banshee.Services/Banshee.Database/BansheeDbConnection.cs: